# portfolio_samples

./: README.md  main.py  pyproject.toml
Samples/Daily Python questions/Beginner/: Area_and_Perimeter_of_rectangle.py  Count up to 100.py  Square_number_loop.py
Samples/Raw data/: sales_data.csv
data-processing/: employee_data.csv
financial-data-pipeline/src/: data_cleaner.py  explore.py
