[project]
name = "portfolio-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "polars>=1.42.1",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
]
